--- a/management/app/globals.css
+++ b/management/app/globals.css
@@ -10,6 +10,9 @@
 
 body {
   @apply min-h-screen  font-roboto antialiased;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body.dark {
@@ -17,6 +20,22 @@ body.dark {
 }
 
 /* ========================================== TAILWIND STYLES */
+
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  h3 {
+    @apply text-lg;
+  }
+  a {
+    @apply text-blue-600 underline;
+  }
+}
+
 @layer base {
   /* Remove scrollbar */
   .remove-scrollbar::-webkit-scrollbar {
@@ -60,6 +79,10 @@ body.dark {
 
   .bg-image {
     @apply bg-black-900 bg-light-rays bg-cover bg-no-repeat;
+  }
+
+  .section_main {
+    @apply container py-3;
   }
 
   .header {
@@ -197,7 +220,7 @@ body.dark {
 
   /* =====  SHADCN OVERRIDES */
   .shad-primary-btn {
-    @apply bg-green-500 text-white !important;
+    @apply bg-blue-600 text-white !important;
   }
 
   .shad-danger-btn {
