--- a/management/app/globals.css
+++ b/management/app/globals.css
@@ -61,6 +61,10 @@ body.dark {
 
 @layer utilities {
   /* ===== UTILITIES */
+
+  .isLoading {
+    @apply flex flex-col gap-10 bg-overlayDark fixed left-0 right-0 bottom-0 h-screen z-50 items-center justify-center;
+  }
   .sidebar {
     @apply remove-scrollbar w-full max-w-72 flex-col overflow-auto bg-black-800 px-7 py-10;
   }
