--- a/management/app/globals.css
+++ b/management/app/globals.css
@@ -77,6 +77,18 @@ body.dark {
     @apply hidden xl:flex;
   }
 
+  /* custom btn */
+  .custom-button {
+    @apply bg-blue-600 text-white mt-6 px-5 py-3 w-[200px] rounded-md !important;
+  }
+
+  /* Custom dialog  */
+  .custom-dialog {
+    /*    @apply w-screen h-screen fixed top-0 left-0 bg-black-200 bg-opacity-80 z-50 flex items-center justify-center;
+    display: none; */
+    @apply w-screen h-screen fixed bg-black bg-opacity-80 top-0 left-0 right-0 bottom-0 overflow-hidden flex items-center justify-center;
+  }
+
   .clip-text {
     @apply bg-clip-text text-transparent;
   }
